# llm_cache_proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  dashboard.html  docker-compose.yml  test_dashboard.sh
documentation/: phase-1-basic-proxy.md  phase-2-exact-match-caching.md  phase-3-semantic-caching.md  phase-4-production-polish.md
examples/: simple_cache.rs  simple_server.rs
python_embedding/: Dockerfile  main.py  requirements.txt  test_cache_performance.py  test_proxy.py  test_summary.csv  test_summary.json
src/: cache.rs  client.rs  handlers.rs  logger.rs  main.rs  metrics.rs  models.rs
