[package]
name = "llm_cache_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
